URl-Shortner/deployment/postgres-replica.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-replica
  namespace: url-shortener
spec:
  serviceName: "postgres-replica-headless"
  replicas: 1
  selector:
    matchLabels:
      app: postgres-replica
  template:
    metadata:
      labels:
        app: postgres-replica
    spec:
      tolerations:
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
      securityContext:
        runAsUser: 999
        fsGroup: 999
      containers:
        - name: postgres-replica
          image: postgres:15
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: config-files
              mountPath: /etc/postgresql/postgresql.conf
              subPath: replica-postgresql.conf
            - name: postgres-replica-data
              mountPath: /var/lib/postgresql/data
          command: ["/bin/sh", "-c"]
          args:
            - |
              [...]
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -h 127.0.0.1 -p 5432 -U admin -d postgres
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
      volumes:
        - name: config-files
          configMap:
            name: postgres-configs
  volumeClaimTemplates:
    - metadata:
        name: postgres-replica-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
#        accessModes:
#        - ReadWriteOnce
#        storageClassName: eks-auto-ebs
        resources:
          requests:
            storage: 10Gi
