URl-Shortner/deployment/base-infra.yml
apiVersion: v1
kind: Namespace
metadata:
  name: url-shortener
---

apiVersion: v1
kind: Service
metadata:
  name: postgres-primary-headless
  namespace: url-shortener
spec:
  clusterIP: None
  selector:
    app: postgres-primary
  ports:
    - port: 5432
      targetPort: 5432
