URl-Shortner/deployment/db-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-write-router
  namespace: url-shortener
spec:
  selector:
    app: postgres-primary
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-read-router
  namespace: url-shortener
spec:
  selector:
    app: postgres-replica
  ports:
    - port: 5432
      targetPort: 5432
