URl-Shortner/deployment/nginx-cdn-deployment.yaml
# Code Generated by Sidekick is for learning and experimentation purposes only.
# filename: nginx-cdn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-cdn
  namespace: url-shortener
  labels:
    app: nginx-cdn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-cdn
  template:
    metadata:
      labels:
        app: nginx-cdn
    spec:
      containers:
        - name: nginx-cdn
          image: sandeshs/url-shortener-nginx-cdn:831ae0dea3f937c64619dbb31e2314ab72a70d4f
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          securityContext:
            runAsUser: 101
            runAsGroup: 101
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
          livenessProbe:
            httpGet:
              path: /nginx-health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /nginx-health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-cdn
  namespace: url-shortener
  labels:
    app: nginx-cdn
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
#  loadBalancerClass: eks.amazonaws.com/nlb
  selector:
    app: nginx-cdn
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
