URl-Shortner/deployment/nginx-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-cdn
  namespace: url-shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-cdn
  template:
    metadata:
      labels:
        app: nginx-cdn
    spec:
      containers:
        - name: nginx-cdn
          image: sandeshs/url-shortener-nginx-cdn:d60a2191906906e8b153b0fd480d6dff6eba6c69
          ports:
            - containerPort: 8080 # Matches our new unprivileged container port configuration
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-cdn
  namespace: url-shortener
spec:
  type: NodePort
  selector:
    app: nginx-cdn
  ports:
    - port: 80
      targetPort: 8080 # Correctly maps port 80 traffic down to container port 8080
      nodePort: 30080
