URl-Shortner/deployment/redirect-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redirect-service
  namespace: url-shortener
spec:
  replicas: 1 # Scale up easily to handle redirect traffic surges
  selector:
    matchLabels:
      app: redirect-service
  template:
    metadata:
      labels:
        app: redirect-service
    spec:
      containers:
        - name: redirect-service
          image: sandeshs/url-shortener-redirect-service:7a1453c4e582573160f7cdde8c46e5e802189913
          ports:
            - containerPort: 5002
              name: http
          volumeMounts:
            - name: app-config-volume
              mountPath: /app/config.py
              subPath: config.py
              readOnly: true
      volumes:
        - name: app-config-volume
          configMap:
            name: postgres-configs
---
apiVersion: v1
kind: Service
metadata:
  name: redirect-service
  namespace: url-shortener
spec:
  type: ClusterIP
  selector:
    app: redirect-service
  ports:
    - port: 5002
      targetPort: 5002
