URl-Shortner/deployment/write-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: write-service
  namespace: url-shortener

spec:
  replicas: 1
  selector:
    matchLabels:
      app: write-service
  template:
    metadata:
      labels:
        app: write-service
    spec:
      containers:
        - name: write-service

          image: sandeshs/url-shortener-write-service:7a1453c4e582573160f7cdde8c46e5e802189913
          ports:
            - containerPort: 5001
              name: http
          volumeMounts:
            - name: app-config-volume
              mountPath: /app/config.py
              subPath: config.py
              readOnly: true
      volumes:
        - name: app-config-volume
          configMap:
            name: postgres-configs
---
apiVersion: v1
kind: Service
metadata:
  name: write-service
  namespace: url-shortener
spec:
  type: ClusterIP
  selector:
    app: write-service
  ports:
    - port: 5001
      targetPort: 5001
